--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(PJC_Project main.cpp
         Animation.h
         Animation.cpp
-        Character.h
-        Character.cpp
+        Mario.h
+        Mario.cpp
+        Collision.h
+        Collision.cpp
 )
 
 
